# avante.nvim

./: Cargo.toml  Makefile
crates/avante-curl/: .bacon-locations  Cargo.toml
crates/avante-curl/src/: error.rs  http.rs  httpbin_tests.rs  lib.rs  lib_test.rs  session.rs  util.rs
crates/avante-templates/src/: lib.rs
lua/avante/: config.lua  curl_client.lua  llm.lua  types.lua
lua/avante/llm_tools/: bash.lua  create.lua  dispatch_agent.lua  glob.lua  grep.lua  init.lua  insert.lua  ls.lua  replace_in_file.lua  view.lua
lua/avante/templates/: _tools-guidelines.avanterules  agentic.avanterules
lua/avante/tests/: curl_client_spec.lua
lua/avante/ui/: inline_widgets.lua  widgets.lua
lua/avante/ui/selector/: confirm.lua
tests/: curl_client_integration_spec.lua  curl_client_test_spec.lua
