[package]
name = "avante-curl"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { workspace = true }
# minijinja = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# mlua = { version = "0.9", features = ["module", "luajit", "async", "serialize", "macros"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "blocking", "stream", "multipart","gzip","deflate","brotli"] }
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5"
async-trait = "0.1"
tempfile = "3.9"
tracing = "0.1"
base64 = "0.21"
bytes = "1.5"
once_cell = "1.19"
[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
